fixed date & time inputs on ios mobile

--- a/src/components/form/classes.module.scss
+++ b/src/components/form/classes.module.scss
@@ -178,5 +178,10 @@
       display: flex;
       flex-direction: column;
     }
+
+    .date_input_container,
+    .time_input_container {
+      min-height: 50px;
+    }
   }
 }
